// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the children inside it 1`] = `
<div>
  <CustomHead />
  <div
    className="o-header"
  >
    <Logo
      className="o-header__logo"
    />
    <span
      className="o-header__search"
    >
      <SearchBar
        dispatch={[Function]}
        store={
          Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
        }
      >
        Content
      </SearchBar>
    </span>
    <span
      className="o-header__minibag"
    >
      <Connect(MiniBag) />
    </span>
  </div>
  <Connect(NavBar) />
  <div
    className="o-body"
  >
    Content
  </div>
  <div
    className="o-footer"
  >
    Footer
  </div>
</div>
`;

exports[`renders the footer 1`] = `
<div>
  <CustomHead />
  <div
    className="o-header"
  >
    <Logo
      className="o-header__logo"
    />
    <span
      className="o-header__search"
    >
      <SearchBar
        dispatch={[Function]}
        store={
          Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
        }
      />
    </span>
    <span
      className="o-header__minibag"
    >
      <Connect(MiniBag) />
    </span>
  </div>
  <Connect(NavBar) />
  <div
    className="o-body"
  />
  <div
    className="o-footer"
  >
    Footer
  </div>
</div>
`;

exports[`renders the header 1`] = `
<div>
  <CustomHead />
  <div
    className="o-header"
  >
    <Logo
      className="o-header__logo"
    />
    <span
      className="o-header__search"
    >
      <SearchBar
        dispatch={[Function]}
        store={
          Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
        }
      />
    </span>
    <span
      className="o-header__minibag"
    >
      <Connect(MiniBag) />
    </span>
  </div>
  <Connect(NavBar) />
  <div
    className="o-body"
  />
  <div
    className="o-footer"
  >
    Footer
  </div>
</div>
`;

exports[`renders the navbar 1`] = `
<div>
  <CustomHead />
  <div
    className="o-header"
  >
    <Logo
      className="o-header__logo"
    />
    <span
      className="o-header__search"
    >
      <SearchBar
        dispatch={[Function]}
        store={
          Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
        }
      />
    </span>
    <span
      className="o-header__minibag"
    >
      <Connect(MiniBag) />
    </span>
  </div>
  <Connect(NavBar) />
  <div
    className="o-body"
  />
  <div
    className="o-footer"
  >
    Footer
  </div>
</div>
`;
